refactor: gateway-service 및 member-auth-service 리팩토링
- 패키지 및 코드 스타일, 로그, 주석 등등을 일관성 있게 수정
- gateway-service에서 문자열 대신 상수 사용 및 공통 예외처리 생성